tests/script_errors/lexer_unterminated_ident/error.txt
Error: 
    1 | let `42 = 42;       
      |     ^^^^^^^^^ It looks like you forgot to terminate an ident with a closing '`'